
Changes to Existing Features in 3.26.1
======================================
[3406549] Tooltip for System tray (displaying database file path) is
now limited to 40 characters (replacing text in the middle with '...'
if needed).
[3348954] The passphrase is now required to change from read-only to
read/write.

Bugs fixed in 3.26.1
====================
[3395549] PasswordSafe now displays forms correctly on Netbooks.
[3382422] Toolbar now updated to reflect R/W or R-O mode when user
dynamically changes mode. 
[3380714] User can now save database after manually taking a bakup.
[3380424] System Menu 'X' now closes the Edit/View PropertyPages when
the database is in R-O mode or the entry is protected.
[] Filter image in Status bar is no longer replaced by 'Filter1' after
changing preferences via Manage->Options.
[] Selecting hexadecimal passwords as the database policy no longer
causes validation to fail.
[] Correctly show database has been modified (to allow saving) if
database preferences have been changed.

New Features for 3.26
=====================
[3288341] Autotype has been added to the DragBar. Drag the image to an
input area on another Window (e.g., Browser) and PasswordSafe will
begin Autotype from there. 
[3286721] User can now toggle between read-only and read-write modes
via a menu item or by double-clicking on the current R-O or R/W
indicator in the Status Bar.
[3203152] The displayed language can now be changed via the new
Manage->Change Language menu.
[3065111] Add/Edit now displays both the Application's (PasswordSafe) and the
current database's default Autotype string (if set via Manage->Options).
[2964804, 1855389] The user can specify the list of symbols valid for
password generation, and can override this for any particular
entry (except when EasyVision or Pronounceable passwords are chosen).
[1831893, 1471134] Added Autotype code "\s" to send "Shift+Tab" (back tab).
[] Allow user to control copying of the password to clipboard when